feat: Add core components for video journaling application
- Introduced `QuestionDisplay` component for displaying questions.
- Added `TranscriptView` component for showing transcriptions.
- Created `SessionActionButtons` for managing session actions (save/discard).
- Implemented `SessionControls` for starting/stopping sessions and handling errors.
- Developed `SessionHeader` to show recording status and time.
- Built `AudioStreamer` for handling audio input and WebSocket communication.
- Created `JournalEntry` for displaying transcriptions and follow-up questions.
- Added `LandingPage` as the entry point for the application.
- Implemented `SessionController` to manage the overall session flow.
- Developed `VideoRecorder` for recording and saving video sessions.
- Set up Tailwind CSS for styling and animations.
- Configured TypeScript and Vite for the project.
- Removed unused test audio file.

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,3 +6,10 @@ ollama==0.1.6
 pydantic==2.6.0
 pydantic-settings==2.1.0
 requests==2.31.0
+packaging==25.0
+torch==2.9.1
+torchaudio==2.9.1
+websockets==15.0.1
+transformers==4.37.2
+accelerate==0.27.2
+numpy==2.2.6
